Cleanup, build setup
Added makefiles to generate date-stamped index.html
Added support to generate init/init.txt
Cleaned out unused files
Updated *.html.in files for correct instructions,
  credit LF website instead of kernel.org

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/init/index.html
+++ b/init/index.html
@@ -37,11 +37,11 @@ the <b>System Initialization</b> chapter of the <a href=http://refspecs.linux-fo
 The LSB Init Script names assigned by LANANA will only consist of the ASCII characters [-_.a-z0-9].
 
 <UL>
-<LI><A HREF="init.txt">Current LSB Init Script Name List</A> 08 Jul 2014
+<LI><A HREF="init.txt">Current LSB Init Script Name List</A> 06 Feb 2018
 <A HREF="CHANGELOG">CHANGELOG</A>
 </UL>
 
-To obtain new LSB Init Script name assignments, first read these <A HREF="../instructions.html">instructions</A> and then submit your completed request (do not use HTML email format) to the current LSB registrar:
+To obtain a new LSB Init Script name assignment, submit your request according to these <A HREF="../instructions.html">instructions</A>. In case of problems, contact the the LSB registrar:
 <P>
 <TABLE WIDTH=100%>
 <TR>
@@ -49,21 +49,14 @@ To obtain new LSB Init Script name assignments, first read these <A HREF="../ins
 <TD><TT>lsb @ lanana.org</TT>
 </TABLE>
 
-<P>
-<table bgcolor="#606060" cols="2" width="100%" border="0">
+<br>
+<table summary="credits" bgcolor="#606060" cols="2" width="100%" border="0">
 <tr>
-<td align=left width="66%">
-<FONT SIZE=-1 color="#FFFFFF">
-This web page is hosted by <A HREF="http://www.kernel.org/"><font color="#FFFFFF">The Linux Kernel Archives</font></A>.
-</FONT>
-</td>
-<td align=right width="33%">
-<FONT SIZE=-1 color="#FFFFFF">
-Last Modified: 08 Jul 2014
-</FONT>
-</td>
-<tr>
-</table>
+<td align="left" width="66%" class="c8">This web page is hosted by the
+<a href="http://www.linuxfoundation.org/">Linux Foundation</a></td>
+<td align="right" width="33%" class="c8">
+Site Last Modified: 06 Feb 2018</td>
+</tr>
 
-</BODY>
-</HTML>
+</body>
+</html>
