--- a/toplevel/index.html
+++ b/toplevel/index.html
@@ -72,16 +72,16 @@ For information, email <a href=
 <b>Please note that these pages contain the latest
 <em>published</em> assignments. There may be additional assignments
 which have not yet been published.</b> <br>
- <br>
-<table summary="credits" bgcolor="#606060" cols="2" width="100%"
-border="0">
+
+<br>
+<table summary="credits" bgcolor="#606060" cols="2" width="100%" border="0">
 <tr>
-<td align="left" width="66%" class="c8">This web page is hosted by
-<a href="http://www.kernel.org/" class="c7">The Linux Kernel
-Archives</a>.</td>
-<td align="right" width="33%" class="c8">Site Last Modified: 15 April 2010</td>
+<td align="left" width="66%" class="c8">This web page is hosted by the
+<a href="http://www.linuxfoundation.org/">Linux Foundation</a></td>
+<td align="right" width="33%" class="c8">
+Site Last Modified: 06 Feb 2018</td>
 </tr>
-</table>
+
 </body>
 </html>
 
