--- a/cron/index.html
+++ b/cron/index.html
@@ -40,32 +40,28 @@ The LSB cron script names assigned by LANANA will only consist of the ASCII char
 See the <b>System Initialization</b> chapter of the LSB specification.
 
 <UL>
-<LI><A HREF="cron.txt">Current Cron Script Name List</A> 08 Jul 2014
+<LI><A HREF="cron.txt">Current Cron Script Name List</A> 06 Feb 2018
 <A HREF="CHANGELOG">CHANGELOG</A>
 </UL>
 
-To obtain a new LSB Cron Script name assignment, first read these <A HREF="../instructions.html">instructions</A> and then submit your completed request (do not use HTML email format) to the current LSB registrar:
+To obtain a new LSB Cron Script name assignment, submit your request according to these <A HREF="../instructions.html">instructions</A>. In case of problems, contact the the LSB registrar:
 <P>
-<TABLE WIDTH=100%>
-<TR>
-<TD>Jeff Licquia, Linux Foundation <lsb @ lanana.org>
-</TABLE>
 
-<P>
-<table bgcolor="#606060" cols="2" width="100%" border="0">
+<table width=100%>
 <tr>
-<td align=left width="66%">
-<FONT SIZE=-1 color="#FFFFFF">
-This web page is hosted by <A HREF="http://www.kernel.org/"><font color="#FFFFFF">The Linux Kernel Archives</font></A>.
-</FONT>
-</td>
-<td align=right width="33%">
-<FONT SIZE=-1 color="#FFFFFF">
-Last Modified: 08 Jul 2014
-</FONT>
-</td>
-<tr>
+<td>Jeff Licquia, Linux Foundation</td>
+<td><tt>lsb @ lanana.org</tt></td>
+</tr>
 </table>
 
-</BODY>
-</HTML>
+<br>
+<table summary="credits" bgcolor="#606060" cols="2" width="100%" border="0">
+<tr>
+<td align="left" width="66%" class="c8">This web page is hosted by the
+<a href="http://www.linuxfoundation.org/">Linux Foundation</a></td>
+<td align="right" width="33%" class="c8">
+Site Last Modified: 06 Feb 2018</td>
+</tr>
+
+</body>
+</html>
